--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^4.15.6",
     "@astrojs/check": "^0.9.3",
+    "@astrojs/node": "^8.3.3",
+    "@astrojs/tailwind": "^5.1.0",
+    "@directus/sdk": "^17.0.1",
+    "astro": "^4.15.6",
+    "tailwindcss": "^3.4.12",
     "typescript": "^5.6.2"
   }
 }
