--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@astrojs/tailwind": "^5.1.0",
     "@directus/sdk": "^17.0.1",
     "astro": "^4.15.6",
+    "swiper": "^11.1.14",
     "tailwindcss": "^3.4.12",
     "typescript": "^5.6.2"
   }
