--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
     "swiper": "^11.1.14",
     "tailwindcss": "^3.4.12",
     "typescript": "^5.6.2"
+  },
+  "devDependencies": {
+    "@types/jquery": "^3.5.32"
   }
 }
