--- a/package.json
+++ b/package.json
@@ -12,10 +12,15 @@
   "dependencies": {
     "@astrojs/check": "^0.9.3",
     "@astrojs/node": "^8.3.3",
+    "@astrojs/react": "^4.1.3",
     "@astrojs/sitemap": "^3.1.6",
     "@astrojs/tailwind": "^5.1.0",
     "@directus/sdk": "^17.0.1",
+    "@types/react": "^19.0.6",
+    "@types/react-dom": "^19.0.3",
     "astro": "^4.15.6",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "swiper": "^11.1.14",
     "tailwindcss": "^3.4.12",
     "typescript": "^5.6.2"
