--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.9.3",
+    "@astrojs/image": "^0.18.0",
     "@astrojs/node": "^8.3.3",
     "@astrojs/react": "^4.1.3",
     "@astrojs/sitemap": "^3.1.6",
     "@astrojs/tailwind": "^5.1.0",
-    "@directus/sdk": "^17.0.1",
+    "@directus/sdk": "^17.0.2",
     "@types/react": "^19.0.6",
     "@types/react-dom": "^19.0.3",
     "astro": "^4.15.6",
