--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
     "@types/react-dom": "^19.0.3",
     "astro": "^4.15.6",
     "react": "^19.0.0",
+    "react-country-flag": "^3.1.0",
     "react-dom": "^19.0.0",
     "swiper": "^11.1.14",
     "tailwindcss": "^3.4.12",
     "typescript": "^5.6.2"
   },
   "devDependencies": {
-    "@types/jquery": "^3.5.32"
+    "@types/jquery": "^3.5.32",
+    "prettier": "^3.5.3"
   }
 }
