--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
-    "build": "astro check && astro build",
+    "build": "paraglide-js compile --project ./project.inlang --outdir ./src\\paraglide && astro check && astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "machine-translate": "inlang machine translate --project project.inlang"
   },
   "dependencies": {
     "@astrojs/check": "^0.9.3",
@@ -16,6 +17,7 @@
     "@astrojs/sitemap": "^3.1.6",
     "@astrojs/tailwind": "^5.1.0",
     "@directus/sdk": "^17.0.2",
+    "@inlang/paraglide-astro": "^0.4.1",
     "@types/react": "^19.0.6",
     "@types/react-dom": "^19.0.3",
     "astro": "^4.15.6",
@@ -27,6 +29,8 @@
     "typescript": "^5.6.2"
   },
   "devDependencies": {
+    "@inlang/cli": "^3.0.0",
+    "@inlang/paraglide-js": "^2.0.5",
     "@types/jquery": "^3.5.32",
     "prettier": "^3.5.3"
   }
