--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
   "extends": "astro/tsconfigs/strict",
   "compilerOptions": {
     "jsx": "react-jsx",
+    "allowJs": true,
     "jsxImportSource": "react",
     "types": ["astro/client"],
     "moduleResolution": "node",
