--- a/package.json
+++ b/package.json
@@ -18,9 +18,12 @@
     "@astrojs/tailwind": "^5.1.0",
     "@directus/sdk": "^17.0.2",
     "@inlang/paraglide-astro": "^0.4.1",
+    "@tailwindcss/typography": "^0.5.16",
     "@types/react": "^19.0.6",
     "@types/react-dom": "^19.0.3",
     "astro": "^4.15.6",
+    "install": "^0.13.0",
+    "npm": "^11.2.0",
     "react": "^19.0.0",
     "react-country-flag": "^3.1.0",
     "react-dom": "^19.0.0",
